# otel-launcher-python

./: .flake8  .gitignore  .isort.cfg  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  RELEASING.md  demo.py  example.py  noxfile.py  pyproject.toml  requirements-coverage.txt  requirements-dev.txt  requirements-lint.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yml  release.yml
examples/: client.py  code_config.py  server.py
opentelemetry/lightstep/: __init__.py
src/opentelemetry/launcher/: __init__.py  _metrics_exporter.py  configuration.py  metrics.py  tracer.py  version.py
src/opentelemetry/launcher/examples/: client.py  server.py
src/opentelemetry/lightstep/: __init__.py  configuration.py  meter.py  tracer.py
tests/: test_configuration.py  test_example.py  test_examples.py  test_metrics_example.py  test_tracer.py
