# Copyright Lightstep Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = opentelemetry-launcher
description = Launcher, Configuration Layer for OpenTelemetry
long_description = file: README.md
long_description_content_type = text/markdown
author = Lightstep Authors
url = https://github.com/lightstep/otel-launcher-python
platforms = any
license = Apache-2.0
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.4
package_dir=
    =src
packages=find_namespace:
install_requires =
    environs >= 8.0.0
    opentelemetry-api == 0.14b0
    opentelemetry-sdk == 0.14b0
    opentelemetry-exporter-otlp == 0.14b0
    opentelemetry-instrumentation == 0.14b0
    opentelemetry-instrumentation-system-metrics == 0.14b0

[options.extras_require]
test =
    httpretty ~= 1.0.2

[options.packages.find]
where = src

[options.entry_points]
opentelemetry_instrumentor =
    lightstep_launcher = opentelemetry.launcher.configuration:LightstepLauncherInstrumentor
